--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,13 @@
+# .gitignore
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# database
-/prisma/db.sqlite
-/prisma/db.sqlite-journal
-db.sqlite
-
-# next.js
+# build artifacts
 /.next/
 /out/
-next-env.d.ts
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -29,11 +17,13 @@ next-env.d.ts
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
 # local env files
-# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
-.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env*.local
 
 # vercel
@@ -41,14 +31,4 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-
-# idea files
-.idea
-
-# Playwright
-node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-/playwright/.auth/
+next-env.d.ts
