--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
+    "next-pwa": "^5.6.0",
     "typescript": "^5.5.3"
   },
   "packageManager": "npm@10.5.0"
