--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
   },
   "dependencies": {
     "@daily-co/daily-js": "^0",
+    "@hookform/resolvers": "^5.2.2",
     "@mantine/core": "7.17.8",
     "@mantine/hooks": "7.17.8",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.3.0",
     "@supabase/ssr": "^0",
     "@supabase/supabase-js": "2.80.0",
     "@t3-oss/env-nextjs": "0.13.8",
@@ -34,31 +40,30 @@
     "@trpc/next": "11.7.1",
     "@trpc/react-query": "11.7.1",
     "@trpc/server": "11.7.1",
+    "class-variance-authority": "^0",
     "clsx": "2.1.1",
     "dayjs": "1.11.19",
     "dotenv": "16.6.1",
     "lucide-react": "0.553.0",
+    "micro": "^10",
     "next": "14.2.33",
-    "next-pwa": "5.6.0",
-    "postgres": "3.4.7",
+    "next-pwa": "^5",
+    "postgres": "^3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.66.0",
+    "resend": "^3",
     "server-only": "0.0.1",
+    "stripe": "^16",
     "superjson": "2.2.5",
     "tailwind-merge": "2.6.0",
+    "twilio": "^5",
     "zod": "3.25.76",
-    "zustand": "4.5.7",
-    "class-variance-authority": "^0",
-    "micro": "^10",
-    "next-pwa": "^5",
-    "postgres": "^3",
-    "resend": "^3",
-    "stripe": "^16",
-    "twilio": "^5"
+    "zustand": "4.5.7"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.0.1",
+    "@playwright/test": "^1",
     "@types/node": "20.19.24",
     "@types/react": "18.3.26",
     "@types/react-dom": "18.3.7",
@@ -68,15 +73,14 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.33",
     "eslint-config-prettier": "9.1.2",
+    "k6": "^0",
     "postcss": "8.5.6",
     "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "7.0.1",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.7.1",
-    "tailwindcss": "3.4.18",
-    "@playwright/test": "^1",
-    "k6": "^0",
     "snyk": "^1",
+    "tailwindcss": "3.4.18",
     "typescript": "5.9.3"
   },
   "packageManager": "npm@10.5.0"
