--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@mantine/core": "7.17.8",
     "@mantine/hooks": "7.17.8",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
@@ -79,6 +80,7 @@
     "postcss-simple-vars": "7.0.1",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.7.1",
+    "prisma": "^6.19.0",
     "snyk": "^1",
     "tailwindcss": "3.4.18",
     "typescript": "5.9.3"
