--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:run-seeds": "node -r dotenv/config scripts/run-seeds.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@daily-co/daily-js": "^0",
     "@hookform/resolvers": "^5.2.2",
     "@mantine/core": "7.17.8",
@@ -48,11 +49,13 @@
     "lucide-react": "0.553.0",
     "micro": "^10",
     "next": "14.2.33",
+    "next-auth": "^4.24.13",
     "next-pwa": "^5",
     "postgres": "^3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "7.66.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7",
+    "react-server-dom-webpack": "^19.2.0",
     "resend": "^3",
     "server-only": "0.0.1",
     "stripe": "^16",
