--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,5 @@
     ".next/types/**/*.ts",
     "playwright.config.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "components/ui/Textarea.tsx"]
 }
